test/org/midica/testfiles/failing/eff-func-numeric-for-bool-2.midica
INCLUDE inc/instruments.midica


0: legato.set(+0)
